Bugfix: Small graphical bugs with Subwindows and body { overflow }

--- a/src/client-core/css/base.css
+++ b/src/client-core/css/base.css
@@ -2,8 +2,7 @@
 body {
 	margin:0; padding:0;
 	border:0; height:100%;
-	overflow-x:hidden;
-	overflow-y:auto;
+    overflow:hidden;
 }
 body.dark {
     background-color:#333333;
@@ -18,6 +17,8 @@ body.dark {
 #layout {
     position:absolute;
     top:0; left:0; right:0;
+	overflow-x:hidden;
+	overflow-y:auto;
     z-index:5;
 }
 #hidden { display:none; }
@@ -102,7 +103,7 @@ body.dark {
 .subwindow .modal-header { position:relative; padding:3px 10px; }
 .subwindow .modal-header h3 { font-weight:normal; font-size:20px; }
 .subwindow .modal-header .btn-group {
-    position:absolute; top:-2px; right:-1px; height:39px;
+    position:absolute; top:-2px; right:-1px; height:38px;
 }
 .subwindow .modal-header .btn-group > .btn { height:100%; }
 .subwindow .modal-header .btn-group > .btn:first-child {
